fixed dates and remove horizontal scroll

--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -2,7 +2,7 @@ html, body {
   margin: 0;
   padding: 0;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   background-color: rgb(242, 246, 248);
 }
 *{
